deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecs-app
  namespace: ecs-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ecs-app

  template:
    metadata:
      labels:
        app: ecs-app

    spec:
      imagePullSecrets:
        - name: ecr-secret
      serviceAccountName: ecs-app-sa

      containers:
        - name: ecs-app
          image: 706059253979.dkr.ecr.ap-south-1.amazonaws.com/ecs-app:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 20

          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
