service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ecs-app-service
  namespace: ecs-app

spec:
  selector:
    app: ecs-app

  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    nodePort: 30080

  type: NodePort
