ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecs-app-ingress
  namespace: ecs-app

  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=true

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecs-app-service
                port:
                  number: 80
